# obsidian-bot

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
src/: obsidian_bot.py
vault/Science On a Sphere/.obsidian/: app.json  community-plugins.json  graph.json  types.json  workspace.json
vault/Science On a Sphere/Datasets/: Hurricane Tracks Cumulative - 1950 - 2020.md
vault/Science On a Sphere/Datasets/Hurricane Tracks Cumulative - 1950 - 2020/: Additional Information.md  Crosscutting Concepts.md  Data.md  Description.md  Disciplinary Core Ideas.md  Education.md  IBTrACS_ALL_li_FeaturesToJSO.geojson  Legend.md  NGSS.md  Notable Features.md
vault/Science On a Sphere/NGSS/: NGSS Standards.md  Next Generation Science Standards.md
vault/Science On a Sphere/NGSS/Crosscutting Concepts/: Cause and Effect.md  Patterns.md
vault/Science On a Sphere/NGSS/Disciplinary Core Ideas/: ESS1.B Earth and the Solar System.md  ESS2.A Earth Materials and Systems.md  ESS2.B Plate Tectonics and Large-Scale System Interactions.md  ESS2.D Weather and Climate.md  ESS3.A Natural Resources.md  ESS3.B Natural Hazards.md  ESS3.C Human Impacts on Earth Systems.md  ESS3.D Global Climate Change.md  ETS1.A Defining Engineering Problems.md  ETS1.B Developing Possible Solutions.md  LS1.C Organization for Matter and Energy Flow in Organisms.md  PS2.A Forces and Motion.md  PS2.B Types of Interactions.md  PS3.C Relationship Between Energy and Forces.md
vault/Science On a Sphere/NGSS/Elementary/: Elementary Standards.md
vault/sample/.obsidian/: workspace.json
(+20 files in other folders)
